--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 MarketMania.xcworkspace/xcuserdata/alex.xcuserdatad/UserInterfaceState.xcuserstate
 MarketMania.xcworkspace/xcuserdata/alex.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+MarketMania.xcworkspace/xcuserdata/alex.xcuserdatad/UserInterfaceState.xcuserstate
+MarketMania.xcworkspace/xcuserdata/alex.xcuserdatad/UserInterfaceState.xcuserstate
+MarketMania.xcworkspace/xcuserdata/alex.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Pods/Pods.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/xcschememanagement.plist
